add possibility to interpret timestamps

--- a/config-template.ini
+++ b/config-template.ini
@@ -4,11 +4,13 @@ telnet_port = 7072
 password = fhempw
 
 [REQUEST]
-temp = get weather_sensor_outside param temperature
-hum = get weather_sensor_outside param humidity
-state = get weather_sensor_outside param state
+temp = {ReadingsVal("weather_sensor_outside", "temperature", "?")}
+hum = {ReadingsVal("weather_sensor_outside", "humidity", "?")}
+state = {ReadingsVal("weather_sensor_outside", "battery_state", "?")}
+timestamp = {ReadingsVal("weather_sensor_outside", "last_seen", "?")}
 
 [OUTPUT]
 str = Temperature: {temp} °C
     Humidity: {hum} %%
-    {"BATTERIE LEER" if state == "dead" else ""}
+    {"BATTERIE LEER" if state != "high" else ""}
+    (Werte sind {age_hours(timestamp, ",")} Stunden alt)
