add possibility to specify timezone

--- a/config-template.ini
+++ b/config-template.ini
@@ -13,4 +13,4 @@ timestamp = {ReadingsVal("weather_sensor_outside", "last_seen", "?")}
 str = Temperature: {temp} °C
     Humidity: {hum} %%
     {"BATTERIE LEER" if state != "high" else ""}
-    (Werte sind {age_hours(timestamp, ",")} Stunden alt)
+    (Werte sind {age_hours(timestamp, ",", datetime.timezone.utc)} Stunden alt)
