add function "age_minutes" and a mechanism which retries to fetch a value from FHEM (up to 3 times in total)

--- a/config-template.ini
+++ b/config-template.ini
@@ -4,13 +4,14 @@ telnet_port = 7072
 password = fhempw
 
 [REQUEST]
-temp = {ReadingsVal("weather_sensor_outside", "temperature", "?")}
-hum = {ReadingsVal("weather_sensor_outside", "humidity", "?")}
-state = {ReadingsVal("weather_sensor_outside", "battery_state", "?")}
-timestamp = {ReadingsVal("weather_sensor_outside", "last_seen", "?")}
+temp = {ReadingsVal("weather_sensor_outside", "temperature", "")}
+hum = {ReadingsVal("weather_sensor_outside", "humidity", "")}
+state = {ReadingsVal("weather_sensor_outside", "battery_state", "")}
+timestamp = {ReadingsVal("weather_sensor_outside", "last_seen", "")}
 
 [OUTPUT]
 str = Temperature: {temp} °C
     Humidity: {hum} %%
     {"BATTERIE LEER" if state != "high" else ""}
-    (Werte sind {age_hours(timestamp, ",", datetime.timezone.utc)} Stunden alt)
+    Werte sind {age_hours(timestamp, ",", datetime.timezone.utc)} Stunden alt
+    bzw. {age_minutes(timestamp, datetime.timezone.utc)} Minuten
